--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,27 +1,39 @@
-<p id="notice"><%= notice %></p>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-12">
+      <p id="notice"><%= notice %></p>
 
-<h1>Accounts</h1>
+      <div class="card">
+        <div class="header">
+          <h4 class="title">Accounts</h4>
+          <p class="category">Here is a subtitle for this table</p>
+        </div>
+        <div class="content table-responsive table-full-width">
+          <table class="table table-hover table-striped">
+            <thead>
+              <tr>
+                <th>Name</th>
+                <th colspan="3"></th>
+              </tr>
+            </thead>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+            <tbody>
+              <% @accounts.each do |account| %>
+              <tr>
+                <td><%= account.name %></td>
+                <td><%= link_to 'Show', account %></td>
+                <td><%= link_to 'Edit', edit_account_path(account) %></td>
+                <td><%= link_to 'Destroy', account, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+              </tr>
+              <% end %>
+            </tbody>
+          </table>
 
-  <tbody>
-    <% @accounts.each do |account| %>
-      <tr>
-        <td><%= account.name %></td>
-        <td><%= link_to 'Show', account %></td>
-        <td><%= link_to 'Edit', edit_account_path(account) %></td>
-        <td><%= link_to 'Destroy', account, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+          <br/>
 
-<br>
-
-<%= link_to 'New Account', new_account_path %>
+          <%= link_to 'New Account', new_account_path %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
